Fix sidebar collapse icon alignment (#8068)

--- a/src/_sass/components/_sidebar.scss
+++ b/src/_sass/components/_sidebar.scss
@@ -16,6 +16,12 @@
       .nav-link {
         padding-bottom: bs-spacer(2);
         padding-top: bs-spacer(2);
+
+        &.collapsable {
+          &::before {
+            top: 6px;
+          }
+        }
       }
     }
   }
@@ -85,7 +91,7 @@
             font: $site-font-icon;
             left: -24px;
             position: absolute;
-            top: 4px;
+            top: 2px;
             transition: transform .25s ease-in-out;
           }
 
